--- a/package.json
+++ b/package.json
@@ -21,11 +21,15 @@
     "autoprefixer": "10.4.15",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.13",
+    "hast-util-to-string": "^3.0.0",
+    "hastscript": "^8.0.0",
     "next": "13.4.13",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.12.0",
+    "rehype-autolink-headings": "^7.1.0",
+    "rehype-slug": "^6.0.0",
     "remark-gfm": "^4.0.0",
     "tailwindcss": "3.3.3",
     "title": "^3.5.3",
