--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,14 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "types/**/*.d.ts", "utils/**/*.ts", "**/*.mdx"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "types/**/*.d.ts",
+    "utils/**/*.ts",
+    "**/*.mdx"
+  ],
   "exclude": ["node_modules"]
 }
