--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.12.0",
     "rehype-autolink-headings": "^7.1.0",
+    "rehype-highlight": "^7.0.0",
+    "rehype-prism-plus": "^1.6.3",
     "rehype-slug": "^6.0.0",
     "remark-gfm": "^4.0.0",
     "tailwindcss": "3.3.3",
