--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,10 @@
 {
-  "extends": ["next/core-web-vitals", "plugin:prettier/recommended"]
+  "extends": [
+    "next/core-web-vitals",
+    "plugin:mdx/recommended",
+    "plugin:prettier/recommended"
+  ],
+  "settings": {
+    "mdx/code-blocks": true
+  }
 }
