--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "next start",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
-    "format": "prettier -w ."
+    "format": "prettier -w .",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@mdx-js/loader": "^3.0.0",
@@ -30,6 +31,7 @@
     "rehype-highlight": "^7.0.0",
     "rehype-prism-plus": "^1.6.3",
     "rehype-slug": "^6.0.0",
+    "remark-definition-list": "^2.0.0",
     "remark-gfm": "^4.0.0",
     "tailwindcss": "3.3.3",
     "title": "^3.5.3",
@@ -43,8 +45,18 @@
     "@types/react-dom": "18.2.7",
     "@types/title": "^3.4.3",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-mdx": "^3.0.0",
     "eslint-plugin-prettier": "^5.0.1",
+    "husky": "^8.0.0",
+    "lint-staged": "^15.2.0",
     "prettier": "^3.1.0",
-    "prettier-plugin-tailwindcss": "^0.5.9"
+    "prettier-plugin-tailwindcss": "^0.5.9",
+    "remark-preset-prettier": "^2.0.1"
+  },
+  "lint-staged": {
+    "*.{tsx,mdx}": [
+      "eslint --fix",
+      "prettier -w ."
+    ]
   }
 }
